# Git-commit-assistant

./: Cargo.toml  README.md  README_CH.md
src/: main.rs  model.onnx
