[package]
name = "git-commit-assistant"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
git2 = "0.19"
ndarray = "0.15"
ort = "1.16.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[profile.release]
opt-level = "z"
